# ayvu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  glossary.example.json  pyproject.toml
.github/workflows/: tests.yml
docs/: relatorio-tecnico.md  release-workflow.md  tutorial-modo-comum-e-dev.md
src/ayvu/: __init__.py  cache.py  chunking.py  cli.py  cli_progress.py  config.py  domain.py  epub_io.py  glossary.py  html_translate.py  preflight.py  resume.py  translator.py  validation.py
src/epub_local_translator/: __init__.py  cache.py  cli.py  glossary.py
tests/: conftest.py  test_cache.py  test_chunking.py  test_cli.py  test_cli_progress.py  test_config.py  test_epub_io.py  test_glossary.py  test_html_translate.py  test_preflight.py  test_resume.py  test_translator.py  test_validation.py
